--- a/contacto.html
+++ b/contacto.html
@@ -19,12 +19,12 @@
 
         /* Navegación */
         nav {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #1e3a5f;
             padding: 1rem 0;
             position: sticky;
             top: 0;
             z-index: 1000;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 10px rgba(0,0,0,0.2);
         }
 
         nav ul {
@@ -145,8 +145,100 @@
                 font-size: 2rem;
             }
 
+            h2 {
+                font-size: 1.5rem;
+            }
+
+            section {
+                padding: 2rem 1rem;
+            }
+
             .equipo-grid {
                 grid-template-columns: 1fr;
+                gap: 1.5rem;
+            }
+
+            /* Footer */
+            footer {
+                padding: 1.5rem 1rem;
+                margin-top: 2rem;
+            }
+
+            .logo {
+                font-size: 1.5rem;
+                margin-bottom: 0.8rem;
+            }
+
+            footer p {
+                font-size: 0.85rem;
+                margin-bottom: 0.8rem;
+            }
+
+            .redes-sociales {
+                margin-top: 0.8rem;
+                display: flex;
+                justify-content: center;
+                flex-wrap: wrap;
+                gap: 0.5rem;
+            }
+
+            .redes-sociales a {
+                font-size: 1.3rem;
+                margin: 0 0.5rem;
+                padding: 0.3rem;
+            }
+
+            /* Navegación */
+            nav ul {
+                gap: 0.8rem;
+                padding: 0.5rem;
+            }
+
+            nav a {
+                padding: 0.4rem 0.8rem;
+                font-size: 0.9rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 1.75rem;
+            }
+
+            h2 {
+                font-size: 1.3rem;
+            }
+
+            section {
+                padding: 1.5rem 0.8rem;
+            }
+
+            /* Footer más compacto */
+            footer {
+                padding: 1.2rem 0.8rem;
+            }
+
+            .logo {
+                font-size: 1.3rem;
+            }
+
+            footer p {
+                font-size: 0.8rem;
+            }
+
+            .redes-sociales a {
+                font-size: 1.2rem;
+                margin: 0 0.3rem;
+            }
+
+            /* Navegación más compacta */
+            nav ul {
+                gap: 0.5rem;
+            }
+
+            nav a {
+                padding: 0.35rem 0.6rem;
+                font-size: 0.85rem;
             }
         }
     </style>
