--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
         /* Navegación */
         nav {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #1e3a5f;
             padding: 1rem 0;
             position: sticky;
             top: 0;
             z-index: 1000;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 10px rgba(0,0,0,0.2);
         }
 
         nav ul {
@@ -68,6 +68,188 @@
 
         h2 {
             font-size: 2rem;
+        }
+
+        /* Banner Hero */
+        .banner-hero {
+            background: #f5f7fa;
+            color: #333;
+            position: relative;
+            overflow: hidden;
+            min-height: 500px;
+            display: flex;
+            align-items: center;
+        }
+
+        .banner-hero::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: url('data:image/svg+xml,<svg width="100" height="100" xmlns="http://www.w3.org/2000/svg"><circle cx="50" cy="50" r="2" fill="rgba(0,0,0,0.05)"/></svg>');
+            opacity: 0.3;
+            z-index: 1;
+        }
+
+        .banner-container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 4rem 2rem;
+            width: 100%;
+            position: relative;
+            z-index: 2;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 4rem;
+            align-items: center;
+        }
+
+        .banner-content {
+            position: relative;
+            z-index: 1;
+        }
+
+        .banner-image {
+            position: relative;
+            z-index: 1;
+            border-radius: 20px;
+            overflow: hidden;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.3);
+            animation: fadeInRight 1s ease-out;
+        }
+
+        .banner-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+            min-height: 400px;
+        }
+
+        .banner-image::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(135deg, rgba(30, 58, 95, 0.1) 0%, rgba(30, 58, 95, 0.1) 100%);
+        }
+
+        .banner-hero h1 {
+            font-size: 3rem;
+            color: #000;
+            margin-bottom: 1.5rem;
+            text-shadow: none;
+            animation: fadeInLeft 0.8s ease-out;
+            text-align: left;
+            line-height: 1.2;
+            font-weight: 700;
+        }
+
+        .banner-hero p {
+            font-size: 1.2rem;
+            margin-bottom: 2rem;
+            color: #333;
+            animation: fadeInLeft 1s ease-out;
+            text-align: left;
+            line-height: 1.6;
+        }
+
+        .banner-cta {
+            display: inline-block;
+            background: #1e3a5f;
+            color: white;
+            padding: 1rem 2.5rem;
+            border-radius: 50px;
+            text-decoration: none;
+            font-weight: 700;
+            font-size: 1.1rem;
+            transition: all 0.3s;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+            animation: fadeInLeft 1.2s ease-out;
+        }
+
+        .banner-cta:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 6px 20px rgba(30, 58, 95, 0.4);
+            background: #2d4a6f;
+        }
+
+        .banner-features {
+            display: flex;
+            justify-content: flex-start;
+            gap: 2rem;
+            margin-top: 2rem;
+            flex-wrap: wrap;
+            animation: fadeInLeft 1.4s ease-out;
+        }
+
+        .banner-feature {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            font-size: 1rem;
+            color: #333;
+        }
+
+        .banner-feature-icon {
+            font-size: 1.5rem;
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes fadeInLeft {
+            from {
+                opacity: 0;
+                transform: translateX(-30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+
+        @keyframes fadeInRight {
+            from {
+                opacity: 0;
+                transform: translateX(30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+
+        /* Banner Responsive Tablet */
+        @media (max-width: 1024px) and (min-width: 769px) {
+            .banner-container {
+                gap: 3rem;
+                padding: 3rem 2rem;
+            }
+
+            .banner-hero h1 {
+                font-size: 2.5rem;
+            }
+
+            .banner-hero p {
+                font-size: 1.1rem;
+            }
+
+            .banner-image img {
+                min-height: 350px;
+            }
         }
 
         /* Inicio */
@@ -540,9 +722,361 @@
                 font-size: 2rem;
             }
 
+            h2 {
+                font-size: 1.5rem;
+            }
+
+            section {
+                padding: 2rem 1rem;
+            }
+
+            /* Banner Hero Responsive */
+            .banner-hero {
+                min-height: auto;
+                padding: 0;
+            }
+
+            .banner-container {
+                grid-template-columns: 1fr;
+                gap: 2rem;
+                padding: 3rem 1.5rem;
+                text-align: center;
+            }
+
+            .banner-image {
+                order: -1;
+                max-width: 500px;
+                margin: 0 auto;
+            }
+
+            .banner-image img {
+                min-height: 300px;
+            }
+
+            .banner-hero h1 {
+                font-size: 2rem;
+                margin-bottom: 1rem;
+                text-align: center;
+            }
+
+            .banner-hero p {
+                font-size: 1.1rem;
+                margin-bottom: 1.5rem;
+                text-align: center;
+            }
+
+            .banner-cta {
+                padding: 0.9rem 2rem;
+                font-size: 1rem;
+                margin: 0 auto;
+            }
+
+            .banner-features {
+                justify-content: center;
+                gap: 1.5rem;
+                margin-top: 2rem;
+            }
+
+            .banner-feature {
+                font-size: 0.9rem;
+            }
+
+            .banner-feature-icon {
+                font-size: 1.3rem;
+            }
+
             .productos-grid,
             .equipo-grid {
                 grid-template-columns: 1fr;
+                gap: 2rem;
+            }
+
+            /* Modal de Pago */
+            .modal {
+                padding: 1rem;
+                align-items: flex-start;
+            }
+
+            .modal-content {
+                max-height: 95vh;
+                margin: 1rem 0;
+                padding: 1.5rem;
+            }
+
+            .modal-pago {
+                padding: 1.5rem;
+                border-radius: 10px;
+            }
+
+            .modal-pago h2 {
+                font-size: 1.5rem;
+                margin-bottom: 1rem;
+            }
+
+            .close-modal {
+                top: 0.5rem;
+                right: 1rem;
+                font-size: 1.8rem;
+            }
+
+            /* Info del producto */
+            .info-producto-pago {
+                padding: 1rem;
+                margin-bottom: 1.5rem;
+            }
+
+            .info-producto-pago h3 {
+                font-size: 1.1rem;
+            }
+
+            .precio-pago {
+                font-size: 1.1rem;
+            }
+
+            /* Métodos de pago */
+            .metodos-pago-container h3 {
+                font-size: 1.2rem;
+                margin-bottom: 1rem;
+            }
+
+            .metodos-pago-grid {
+                grid-template-columns: 1fr;
+                gap: 1rem;
+                margin-bottom: 1.5rem;
+            }
+
+            .metodo-pago-card {
+                padding: 1.2rem;
+            }
+
+            .metodo-icono {
+                font-size: 2.5rem;
+                margin-bottom: 0.8rem;
+            }
+
+            .metodo-pago-card h4 {
+                font-size: 1rem;
+            }
+
+            .metodo-pago-card p {
+                font-size: 0.85rem;
+            }
+
+            /* Formularios de Pago */
+            .formulario-pago {
+                padding: 1.2rem;
+                margin-top: 1rem;
+            }
+
+            .formulario-pago h4 {
+                font-size: 1.1rem;
+                margin-bottom: 1rem;
+            }
+
+            .form-group {
+                margin-bottom: 1.2rem;
+            }
+
+            .form-group label {
+                font-size: 0.9rem;
+                margin-bottom: 0.4rem;
+            }
+
+            .form-group input,
+            .form-group select {
+                padding: 0.75rem;
+                font-size: 0.95rem;
+                border-radius: 6px;
+            }
+
+            .form-row {
+                grid-template-columns: 1fr;
+                gap: 0.8rem;
+            }
+
+            .btn-pagar {
+                padding: 0.9rem;
+                font-size: 1rem;
+                margin-top: 0.8rem;
+            }
+
+            .info-pse {
+                padding: 0.8rem;
+                margin-bottom: 0.8rem;
+            }
+
+            .info-pse p {
+                font-size: 0.85rem;
+                line-height: 1.4;
+            }
+
+            /* Footer */
+            footer {
+                padding: 1.5rem 1rem;
+                margin-top: 2rem;
+            }
+
+            .logo {
+                font-size: 1.5rem;
+                margin-bottom: 0.8rem;
+            }
+
+            footer p {
+                font-size: 0.85rem;
+                margin-bottom: 0.8rem;
+            }
+
+            .redes-sociales {
+                margin-top: 0.8rem;
+                display: flex;
+                justify-content: center;
+                flex-wrap: wrap;
+                gap: 0.5rem;
+            }
+
+            .redes-sociales a {
+                font-size: 1.3rem;
+                margin: 0 0.5rem;
+                padding: 0.3rem;
+            }
+
+            /* Navegación */
+            nav ul {
+                gap: 0.8rem;
+                padding: 0.5rem;
+            }
+
+            nav a {
+                padding: 0.4rem 0.8rem;
+                font-size: 0.9rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 1.75rem;
+            }
+
+            h2 {
+                font-size: 1.3rem;
+            }
+
+            section {
+                padding: 1.5rem 0.8rem;
+            }
+
+            /* Banner Hero Mobile */
+            .banner-hero {
+                min-height: auto;
+            }
+
+            .banner-container {
+                padding: 2rem 1rem;
+                gap: 1.5rem;
+            }
+
+            .banner-image {
+                max-width: 100%;
+            }
+
+            .banner-image img {
+                min-height: 250px;
+            }
+
+            .banner-hero h1 {
+                font-size: 1.75rem;
+                margin-bottom: 0.8rem;
+                text-align: center;
+            }
+
+            .banner-hero p {
+                font-size: 1rem;
+                margin-bottom: 1.2rem;
+                text-align: center;
+            }
+
+            .banner-cta {
+                padding: 0.8rem 1.8rem;
+                font-size: 0.95rem;
+                display: block;
+                width: fit-content;
+                margin: 0 auto 1rem;
+            }
+
+            .banner-features {
+                flex-direction: column;
+                gap: 1rem;
+                margin-top: 1.5rem;
+                align-items: center;
+            }
+
+            .banner-feature {
+                font-size: 0.85rem;
+            }
+
+            /* Modal más compacto */
+            .modal {
+                padding: 0.5rem;
+            }
+
+            .modal-content {
+                padding: 1rem;
+                border-radius: 8px;
+            }
+
+            .modal-pago h2 {
+                font-size: 1.3rem;
+                padding-right: 2rem;
+            }
+
+            .close-modal {
+                top: 0.3rem;
+                right: 0.8rem;
+                font-size: 1.5rem;
+            }
+
+            /* Formularios más compactos */
+            .formulario-pago {
+                padding: 1rem;
+            }
+
+            .form-group input,
+            .form-group select {
+                padding: 0.7rem;
+                font-size: 16px;
+            }
+
+            .btn-pagar {
+                padding: 0.85rem;
+                font-size: 0.95rem;
+            }
+
+            /* Footer más compacto */
+            footer {
+                padding: 1.2rem 0.8rem;
+            }
+
+            .logo {
+                font-size: 1.3rem;
+            }
+
+            footer p {
+                font-size: 0.8rem;
+            }
+
+            .redes-sociales a {
+                font-size: 1.2rem;
+                margin: 0 0.3rem;
+            }
+
+            /* Navegación más compacta */
+            nav ul {
+                gap: 0.5rem;
+            }
+
+            nav a {
+                padding: 0.35rem 0.6rem;
+                font-size: 0.85rem;
             }
         }
     </style>
@@ -557,6 +1091,38 @@
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
+
+    <!-- Banner Hero -->
+    <div class="banner-hero">
+        <div class="banner-container">
+            <div class="banner-content">
+                <h1>⚖️ Servicios Legales Profesionales</h1>
+                <p>Abogado especializado en brindar soluciones legales de calidad. Asesoría jurídica, representación legal y consultoría profesional para proteger tus intereses.</p>
+                <a href="#tienda" class="banner-cta">Ver Servicios</a>
+                <div class="banner-features">
+                    <div class="banner-feature">
+                        <span class="banner-feature-icon">✅</span>
+                        <span>Atención Personalizada</span>
+                    </div>
+                    <div class="banner-feature">
+                        <span class="banner-feature-icon">🛡️</span>
+                        <span>Protección Legal</span>
+                    </div>
+                    <div class="banner-feature">
+                        <span class="banner-feature-icon">💼</span>
+                        <span>Experiencia Profesional</span>
+                    </div>
+                    <div class="banner-feature">
+                        <span class="banner-feature-icon">📱</span>
+                        <span>Pago Online</span>
+                    </div>
+                </div>
+            </div>
+            <div class="banner-image">
+                <img src="https://images.unsplash.com/photo-1589998059171-988d887df646?w=800&q=80" alt="Servicios Legales Profesionales">
+            </div>
+        </div>
+    </div>
 
     <!-- Página de Inicio -->
     <section id="inicio">
