ajuste script mercado pago

--- a/tienda.html
+++ b/tienda.html
@@ -28,7 +28,12 @@
                     <h3>Consultoría Legal</h3>
                     <p>Asesoría jurídica personalizada de 60 minutos. Análisis de tu caso, orientación legal especializada y recomendaciones estratégicas. Incluye revisión de documentos y seguimiento inicial.</p>
                     <div class="precio">$150.000 / consulta</div>
-                    <button class="btn-comprar" onclick="abrirPasarelaPago('Consultoría Legal', 150000)">Contratar Ahora</button>
+                    <div class="mp-payment-button">
+                        <script src="https://www.mercadopago.com.co/integrations/v1/web-payment-checkout.js"
+                                data-preference-id="3010688486-29eab73d-ad55-4d48-be3d-7cd1b8f8436a" 
+                                data-source="button">
+                        </script>
+                    </div>
                 </div>
             </div>
 
@@ -39,7 +44,12 @@
                     <h3>Representación Legal</h3>
                     <p>Representación profesional en procesos judiciales y administrativos. Incluye preparación de documentos, audiencias y seguimiento completo del caso. Ideal para demandas, defensas y trámites legales.</p>
                     <div class="precio">$500.000 / proceso</div>
-                    <button class="btn-comprar" onclick="abrirPasarelaPago('Representación Legal', 500000)">Contratar Ahora</button>
+                    <div class="mp-payment-button">
+                        <script src="https://www.mercadopago.com.co/integrations/v1/web-payment-checkout.js"
+                                data-preference-id="3010688486-cf70db7b-bd6d-44c7-905e-2c6e3baf0207" 
+                                data-source="button">
+                        </script>
+                    </div>
                 </div>
             </div>
 
@@ -50,7 +60,12 @@
                     <h3>Asesoría en Contratos</h3>
                     <p>Revisión y redacción profesional de contratos comerciales, civiles y laborales. Análisis de cláusulas, identificación de riesgos y protección de tus intereses. Incluye hasta 2 revisiones.</p>
                     <div class="precio">$300.000 / contrato</div>
-                    <button class="btn-comprar" onclick="abrirPasarelaPago('Asesoría en Contratos', 300000)">Contratar Ahora</button>
+                    <div class="mp-payment-button">
+                        <script src="https://www.mercadopago.com.co/integrations/v1/web-payment-checkout.js"
+                                data-preference-id="3010688486-9fba9a73-5d14-4adc-af10-4cabe86e00fc" 
+                                data-source="button">
+                        </script>
+                    </div>
                 </div>
             </div>
         </div>
