--- a/index.html
+++ b/index.html
@@ -403,6 +403,17 @@
             background: #764ba2;
         }
 
+        /* Botones de Mercado Pago */
+        .mp-payment-button {
+            width: 100%;
+            margin-top: 1rem;
+        }
+
+        .mp-payment-button iframe {
+            width: 100% !important;
+            max-width: 100% !important;
+        }
+
         /* Contacto */
         #contacto {
             background: white;
@@ -1171,7 +1182,12 @@
                         <span class="metodo">💳 Tarjeta Crédito/Débito</span>
                         <span class="metodo">📱 Transferencia Bancaria</span>
                     </div>
-                    <button class="btn-comprar" onclick="abrirPasarelaPago('Consultoría Legal', 150000)">Contratar Ahora</button>
+                    <div class="mp-payment-button">
+                        <script src="https://www.mercadopago.com.co/integrations/v1/web-payment-checkout.js"
+                                data-preference-id="3010688486-29eab73d-ad55-4d48-be3d-7cd1b8f8436a" 
+                                data-source="button">
+                        </script>
+                    </div>
                 </div>
             </div>
 
@@ -1187,7 +1203,12 @@
                         <span class="metodo">💳 Tarjeta Crédito/Débito</span>
                         <span class="metodo">💳 Mercado Pago</span>
                     </div>
-                    <button class="btn-comprar" onclick="abrirPasarelaPago('Representación Legal', 500000)">Contratar Ahora</button>
+                    <div class="mp-payment-button">
+                        <script src="https://www.mercadopago.com.co/integrations/v1/web-payment-checkout.js"
+                                data-preference-id="3010688486-cf70db7b-bd6d-44c7-905e-2c6e3baf0207" 
+                                data-source="button">
+                        </script>
+                    </div>
                 </div>
             </div>
 
@@ -1203,7 +1224,12 @@
                         <span class="metodo">💳 Tarjeta Crédito/Débito</span>
                         <span class="metodo">💳 Mercado Pago</span>
                     </div>
-                    <button class="btn-comprar" onclick="abrirPasarelaPago('Asesoría en Contratos', 300000)">Contratar Ahora</button>
+                    <div class="mp-payment-button">
+                        <script src="https://www.mercadopago.com.co/integrations/v1/web-payment-checkout.js"
+                                data-preference-id="3010688486-9fba9a73-5d14-4adc-af10-4cabe86e00fc" 
+                                data-source="button">
+                        </script>
+                    </div>
                 </div>
             </div>
         </div>
