--- a/index.html
+++ b/index.html
@@ -333,11 +333,22 @@
             border-radius: 15px;
             overflow: hidden;
             box-shadow: 0 5px 20px rgba(0,0,0,0.1);
-            transition: transform 0.3s;
+            transition: all 0.3s ease;
+            border: 1px solid rgba(30, 58, 95, 0.1);
         }
 
         .producto:hover {
-            transform: translateY(-5px);
+            transform: translateY(-8px);
+            box-shadow: 0 10px 30px rgba(30, 58, 95, 0.2);
+            border-color: rgba(30, 58, 95, 0.2);
+        }
+
+        .producto img {
+            transition: transform 0.3s ease;
+        }
+
+        .producto:hover img {
+            transform: scale(1.05);
         }
 
         .producto img {
@@ -347,42 +358,67 @@
         }
 
         .producto-info {
-            padding: 1.5rem;
+            padding: 1.8rem;
         }
 
         .producto h3 {
-            color: #667eea;
+            color: #1e3a5f;
+            margin-bottom: 1rem;
+            font-size: 1.5rem;
+            font-weight: 700;
+        }
+
+        .producto-info p {
+            color: #555;
+            line-height: 1.7;
             margin-bottom: 1rem;
         }
 
         .precio {
-            font-size: 1.5rem;
-            color: #764ba2;
-            font-weight: bold;
-            margin: 1rem 0;
+            font-size: 1.8rem;
+            color: #1e3a5f;
+            font-weight: 700;
+            margin: 1.5rem 0;
+            padding: 0.8rem;
+            background: linear-gradient(135deg, #f5f7fa 0%, #e8ecf1 100%);
+            border-radius: 8px;
+            text-align: center;
+            border-left: 4px solid #1e3a5f;
         }
 
         .metodos-pago {
-            margin: 1rem 0;
-            padding: 1rem;
-            background: #f5f7fa;
+            margin: 1.5rem 0;
+            padding: 1.2rem;
+            background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
             border-radius: 10px;
+            border: 1px solid rgba(30, 58, 95, 0.1);
         }
 
         .metodos-pago h4 {
-            font-size: 0.9rem;
-            color: #666;
-            margin-bottom: 0.5rem;
+            font-size: 0.95rem;
+            color: #1e3a5f;
+            margin-bottom: 0.8rem;
+            font-weight: 600;
         }
 
         .metodo {
             display: inline-block;
             background: white;
-            padding: 0.5rem 1rem;
-            margin: 0.25rem;
-            border-radius: 5px;
+            padding: 0.6rem 1.2rem;
+            margin: 0.3rem 0.3rem 0.3rem 0;
+            border-radius: 6px;
             font-size: 0.85rem;
             border: 1px solid #ddd;
+            color: #333;
+            font-weight: 500;
+            transition: all 0.2s ease;
+        }
+
+        .metodo:hover {
+            border-color: #1e3a5f;
+            color: #1e3a5f;
+            transform: translateY(-1px);
+            box-shadow: 0 2px 5px rgba(30, 58, 95, 0.1);
         }
 
         .btn-comprar {
@@ -406,12 +442,26 @@
         /* Botones de Mercado Pago */
         .mp-payment-button {
             width: 100%;
-            margin-top: 1rem;
+            margin-top: 1.5rem;
+            padding: 0;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 15px rgba(30, 58, 95, 0.2);
+            transition: all 0.3s ease;
+            background: transparent;
+        }
+
+        .mp-payment-button:hover {
+            box-shadow: 0 6px 20px rgba(30, 58, 95, 0.3);
+            transform: translateY(-2px);
         }
 
         .mp-payment-button iframe {
             width: 100% !important;
             max-width: 100% !important;
+            border: none !important;
+            border-radius: 10px !important;
+            min-height: 48px !important;
         }
 
         /* Contacto */
@@ -686,28 +736,58 @@
 
         .btn-pagar {
             width: 100%;
-            background: #50c878;
+            background: linear-gradient(135deg, #1e3a5f 0%, #2d4a6f 100%);
             color: white;
-            padding: 1rem;
+            padding: 1.1rem 2rem;
             border: none;
-            border-radius: 8px;
+            border-radius: 10px;
             font-size: 1.1rem;
-            font-weight: 600;
+            font-weight: 700;
             cursor: pointer;
-            transition: all 0.3s;
+            transition: all 0.3s ease;
             margin-top: 1rem;
+            box-shadow: 0 4px 15px rgba(30, 58, 95, 0.3);
+            letter-spacing: 0.5px;
+            text-transform: uppercase;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .btn-pagar::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 0;
+            height: 0;
+            border-radius: 50%;
+            background: rgba(255, 255, 255, 0.2);
+            transform: translate(-50%, -50%);
+            transition: width 0.6s, height 0.6s;
+        }
+
+        .btn-pagar:hover::before {
+            width: 300px;
+            height: 300px;
         }
 
         .btn-pagar:hover {
-            background: #45b869;
-            transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(80, 200, 120, 0.3);
+            background: linear-gradient(135deg, #2d4a6f 0%, #3d5a7f 100%);
+            transform: translateY(-3px);
+            box-shadow: 0 6px 20px rgba(30, 58, 95, 0.4);
+        }
+
+        .btn-pagar:active {
+            transform: translateY(-1px);
+            box-shadow: 0 3px 10px rgba(30, 58, 95, 0.3);
         }
 
         .btn-pagar:disabled {
             background: #ccc;
             cursor: not-allowed;
             transform: none;
+            box-shadow: none;
+            opacity: 0.6;
         }
 
         .info-pse {
